@@ -46,6 +46,7 @@ _Plotting commands
   ishold   - return the hold state of the current axes
   legend   - make an axes legend
   loglog   - a log log plot
+  matshow  - display a matrix in a new figure preserving aspect
   pcolor   - make a pseudocolor plot
   pie      - make a pie chart
   plot     - make a line plot
@@ -195,7 +196,7 @@ from backends import new_figure_manager, error_msg, \
 from cbook import flatten, is_string_like, exception_to_str, popd, silent_list, iterable
 from colors import normalize
 from cm import ColormapJet, Grayscale, get_cmap
-from figure import Figure
+from figure import Figure, figaspect
 import image
 from matplotlib import rcParams, rcParamsDefault, get_backend
 from backend_bases import FigureCanvasBase
@@ -336,6 +337,7 @@ def plotting():
     loglog   - a log log plot
     imread   - load image file into array
     imshow   - plot image data
+    matshow  - display a matrix in a new figure preserving aspect
     pcolor   - make a pseudocolor plot
     plot     - make a line plot
     psd      - make a plot of power spectral density
@@ -1598,6 +1600,71 @@ def switch_backend(newbackend):
     from backends import new_figure_manager, error_msg, \
          draw_if_interactive, show
 
+
+def matshow(*args,**kw):
+    """Display an array as a matrix.
+
+    The origin is set at the upper left hand corner and rows (first dimension
+    of the array) are displayed horizontally.  The aspect ratio of the figure
+    window is that of the array, as long as it is possible to fit it within
+    the constraints of your figure.figsize_min/max parameters with no
+    stretching.  If the window dimensions can't accomodate this (extremely
+    tall/wide arrays), some stretching will inevitably occur.
+
+    matshow() calls imshow() with Aargs and **kwargs, but by default
+    it sets interpolation='nearest' (unless you override it).  All
+    other arguments and keywords are passed to imshow(), so see its
+    docstring for further details.
+
+    Tick labels for the xaxis are placed on top by default.
+    
+    return value is a (fig, ax, im) tuple
+
+    Example usage:
+    
+    def samplemat(dims):
+        aa = zeros(dims)
+        for i in range(min(dims)):
+            aa[i,i] = i
+        return aa
+
+    dimlist = [(12,12),(128,64),(64,512),(2048,256)]
+
+    
+    for i, d in enumerate(dimlist):
+        fig, ax, im = matshow(samplemat(d))
+    show()
+    
+    """
+
+    arr = args[0]
+    w,h = figaspect(arr)
+    fig = figure(figsize=(w,h))
+    ax = fig.add_axes([0.0, 0.05, 0.8, 0.8])
+
+    ax.xaxis.tick_top()
+    ax.title.set_y(1.05) # raise it up a bit for tick top
+    # Call with 'lower' origin (we'll flip axes later)
+    kw['origin'] = 'lower'
+
+    # We also set a 'free' aspect ratio b/c we've already done our best to fix
+    # it, while preserving the dimension sanity checks.  At this point, if a
+    # bit of rescaling is needed, so be it.  Otherwise, we'd get the nasty
+    # white bands we're working so hard to prevent.
+    kw['aspect'] = 'free'
+
+    # Unless overridden, don't interpolate
+    kw.setdefault('interpolation','nearest')
+
+    # All other keywords go through to imshow.
+    im = ax.imshow(*args,**kw)
+    
+    # set the x and y lim to equal the matrix dims
+    nr,nc = arr.shape[:2]
+    ax.set_xlim((0,nc))
+    ax.set_ylim((nr,0))
+    return fig, ax, im
+
     
 ### The following functions were autogenerated by the boilerplate.py
 ### script.  They are simple wrappers around the Axes methods of the
@@ -2520,22 +2587,23 @@ __nxall__ = [
 
 __plotting_all__ = [
     # plotting
+
     'plotting', 'colormaps', 'get_current_fig_manager', 'connect',
     'disconnect', 'get_plot_commands', 'raise_msg_to_str', 'axis',
     'axes', 'delaxes', 'clim', 'close', 'clf', 'colorbar', 'draw',
     'figtext', 'figimage', 'figlegend', 'figure', 'gca', 'gcf', 'gci',
     'get', 'hold', 'ishold', 'isinteractive', 'imread', 'load', 'rc',
-    'rcdefaults', 'save', 'savefig', 'set', 'subplot', 'twinx', 'title',
-    'xlabel', 'ylabel', 'xlim', 'ylim', 'xticks', 'rgrids',
+    'rcdefaults', 'save', 'savefig', 'set', 'subplot', 'twinx',
+    'title', 'xlabel', 'ylabel', 'xlim', 'ylim', 'xticks', 'rgrids',
     'thetagrids', 'yticks', 'polar', 'over', 'ioff', 'ion', 'axhline',
     'axhspan', 'axvline', 'axvspan', 'bar', 'barh', 'cohere',
     'contour', 'csd', 'errorbar', 'fill', 'hist', 'hlines', 'imshow',
-    'loglog', 'pcolor', 'pcolor_classic', 'pie', 'plot', 'plot_date',
-    'psd', 'scatter', 'scatter_classic', 'semilogx', 'semilogy',
-    'specgram', 'spy', 'spy2', 'stem', 'vlines', 'cla', 'grid',
-    'legend', 'table', 'text', 'autumn', 'bone', 'cool', 'copper',
-    'flag', 'gray', 'hot', 'hsv', 'jet', 'pink', 'prism', 'spring',
-    'summer', 'winter',
+    'loglog', 'matshow', 'pcolor', 'pcolor_classic', 'pie', 'plot',
+    'plot_date', 'psd', 'scatter', 'scatter_classic', 'semilogx',
+    'semilogy', 'specgram', 'spy', 'spy2', 'stem', 'vlines', 'cla',
+    'grid', 'legend', 'table', 'text', 'autumn', 'bone', 'cool',
+    'copper', 'flag', 'gray', 'hot', 'hsv', 'jet', 'pink', 'prism',
+    'spring', 'summer', 'winter',
 
     # classes and modules
 
