@@ -9,7 +9,7 @@ s = """\
 LICENSE AGREEMENT FOR MATPLOTLIB %(version)s
 --------------------------------------
 
-1. This LICENSE AGREEMENT is between the John D. Hunter ("JDH"), and the
+1. This LICENSE AGREEMENT is between John D. Hunter ("JDH"), and the
 Individual or Organization ("Licensee") accessing and otherwise using
 matplotlib software in source or binary form and its associated
 documentation.
@@ -20,7 +20,7 @@ to reproduce, analyze, test, perform and/or display publicly, prepare
 derivative works, distribute, and otherwise use matplotlib %(version)s
 alone or in any derivative version, provided, however, that JDH's
 License Agreement and JDH's notice of copyright, i.e., "Copyright (c)
-2002-2004 John D. Hunter; All Rights Reserved" are retained in
+2002-2005 John D. Hunter; All Rights Reserved" are retained in
 matplotlib %(version)s alone or in any derivative version prepared by
 Licensee.
 
